--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
