--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "i": "^0.3.6",
     "lodash": "^4.17.11",
+    "npm": "^6.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
