--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tinycolor2": "^1.4.1"
   },
   "scripts": {
     "server-dev": "set NODE_ENV=dev&& node server.js",
