--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.10.0",
     "react-transition-group": "^2.9.0",
     "sass-loader": "^7.1.0",
