--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm": "^6.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-markdown": "^4.0.8",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
