--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "github-markdown-css": "^3.0.1",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
