--- a/package.json
+++ b/package.json
@@ -27,17 +27,19 @@
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "github-markdown-css": "^3.0.1",
+    "highlightjs": "^9.12.0",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.8",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "remarkable": "^1.7.1",
     "tinycolor2": "^1.4.1"
   },
   "scripts": {
