--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.0.1",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -17,13 +18,14 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -45,6 +47,8 @@
   "scripts": {
     "server-dev": "set NODE_ENV=dev&& node server.js",
     "server-prd": "set NODE_ENV=production && node server.js",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "dev:test": "webpack-dev-server --config config/webpack.dev.config.js",
+    "view": "echo $npm_package_version"
   }
 }
