--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "highlightjs": "^9.12.0",
@@ -42,13 +44,12 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "remarkable": "^1.7.1",
-    "tinycolor2": "^1.4.1"
+    "tinycolor2": "^1.4.1",
+    "webpack-dev-middleware": "^3.7.0"
   },
   "scripts": {
-    "server-dev": "set NODE_ENV=dev&& node server.js",
-    "server-prd": "set NODE_ENV=production && node server.js",
-    "dev": "webpack-dev-server",
-    "dev:test": "webpack-dev-server --config config/webpack.dev.config.js",
-    "view": "echo $npm_package_version"
+    "server-dev": "set NODE_ENV=dev && node server.js",
+    "build": "set NODE_ENV=production && node config/server.js",
+    "dev": "webpack-dev-server --progress --inline --config config/webpack.dev.config.js"
   }
 }
