--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "highlightjs": "^9.12.0",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
+    "mongoose": "^5.6.0",
     "npm": "^6.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
