sortable setting for upload & work on upload demo page

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "remarkable": "^1.7.1",
+    "sortablejs": "^1.10.0-rc2",
     "tinycolor2": "^1.4.1",
     "webpack-dev-middleware": "^3.7.0"
   },
