--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "i": "^0.3.6",
     "lodash": "^4.17.11",
     "mongoose": "^5.6.0",
+    "multer": "^1.4.1",
     "npm": "^6.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
