--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/lodash": "^4.14.136",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
