--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "classnames": "^2.2.6",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
+    "dateformat": "^3.0.3",
     "express": "^4.16.4",
     "highlightjs": "^9.12.0",
     "i": "^0.3.6",
