--- a/package.json
+++ b/package.json
@@ -64,6 +64,6 @@
     "build": "set NODE_ENV=production && node config/server.js",
     "dev": "webpack-dev-server --progress --inline --config config/webpack.dev.config.js",
     "dev-sc": "webpack-dev-server --progress --inline --config src/modules/shopCart/config/webpack.shopCart.dev.config.js",
-    "start-site": "set NODE_ENV=production && node src/modules/site/config/server.js"
+    "site-start": "node src/modules/site/config/dev-server.js"
   }
 }
