thought & initialization of calendar, studied BEM 命名规范

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "shopcart-dev": "webpack-dev-server --progress --inline --config src/modules/shopCart/config/webpack.shopCart.dev.config.js",
     "start-site": "node src/modules/site/config/dev-server.js",
     "build-site": "node src/modules/site/config/build.js",
-    "cal-dev": "webpack-dev-server --progress --inline --config src/modules/calendar/config/webpack.dev.config.js"
+    "cal-dev": "webpack-dev-server --progress --inline --config src/modules/calendar/config/webpack.dev.config.js",
+    "build-cal": "node src/modules/calendar/config/build.js"
   }
 }
