--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "npm": "^6.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-intl": "^3.2.1",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.8",
     "react-redux": "^5.1.1",
