--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "forceConsistentCasingInFileNames": true,
       "importHelpers": true,
       "jsx": "react",
-      "lib": ["dom", "es2018"],
+      "lib": ["dom", "es2018", "esnext.intl", "es2017.intl", "es2018.intl"],
       "module": "es6",
       "moduleResolution": "node",
       "noEmitOnError": true,
