--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0",
     "remarkable": "^1.7.1",
     "sortablejs": "^1.10.0-rc2",
