--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ora": "^3.4.0",
     "react-transition-group": "^2.9.0",
+    "redux-devtools-extension": "^2.13.8",
     "rimraf": "^3.0.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
@@ -38,6 +39,7 @@
   "dependencies": {
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.136",
+    "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.5",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
