--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "mongoose": "^5.6.0",
     "multer": "^1.4.1",
     "npm": "^6.9.0",
-    "react": "^=16.7.0-alpha",
-    "react-dom": "^16.8.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-intl": "^3.2.1",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.8",
