--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "start-site": "node src/modules/site/config/dev-server.js",
     "build-site": "node src/modules/site/config/build.js",
     "cal-dev": "webpack-dev-server --progress --inline --config src/modules/calendar/config/webpack.dev.config.js",
-    "build-cal": "node src/modules/calendar/config/build.js"
+    "build-cal": "node src/modules/calendar/config/build.js",
+    "se-dev": "webpack-dev-server --progress --inline --config src/modules/siteExpo/config/webpack.dev.config.js"
   }
 }
