--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-markdown": "^4.0.8",
     "react-redux": "^7.1.1",
     "react-router-dom": "^4.3.1",
+    "react-use": "^12.7.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0",
