--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
   "presets": ["env", "stage-0", "react"],
+  // "presets": ["@babel/preset-env", "react"],
   "plugins": ["transform-runtime", "zent"]
 }
