--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.6.0",
     "multer": "^1.4.1",
+    "nodemailer": "^6.4.2",
     "npm": "^6.9.0",
     "react": "^=16.7.0-alpha",
     "react-dom": "^16.8.0",
@@ -87,6 +88,7 @@
     "carou-dev": "webpack-dev-server --progress --inline --config src/modules/demoCarousel/config/webpack.dev.config.js",
     "build-carou": "node src/modules/demoCarousel/config/build.js",
     "3dls-dev": "webpack-dev-server --progress --inline --config src/modules/3dlsPromoSite/config/webpack.dev.config.js",
+    "start-3dls": "node src/modules/3dlsPromoSite/config/dev-server.js",
     "build-3dls": "node src/modules/3dlsPromoSite/config/build.js"
   }
 }
