--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "multer": "^1.4.1",
     "nodemailer": "^6.4.2",
     "npm": "^6.9.0",
+    "pm2": "^4.2.3",
     "react": "^=16.7.0-alpha",
     "react-dom": "^16.8.0",
     "react-intl": "^3.2.1",
@@ -89,6 +90,7 @@
     "build-carou": "node src/modules/demoCarousel/config/build.js",
     "3dls-dev": "webpack-dev-server --progress --inline --config src/modules/3dlsPromoSite/config/webpack.dev.config.js",
     "start-3dls": "node src/modules/3dlsPromoSite/config/dev-server.js",
-    "build-3dls": "node src/modules/3dlsPromoSite/config/build.js"
+    "build-3dls": "node src/modules/3dlsPromoSite/config/build.js",
+    "prod-3dls": "pm2 start node src/modules/3dlsPromoSite/config/dev-server.js"
   }
 }
