--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.3",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.136",
     "@types/react-redux": "^7.1.2",
