--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "allowUnreachableCode": false,
       "allowUnusedLabels": false,
       "declaration": true,
-      "forceConsistentCasingInFileNames": true,
+      "forceConsistentCasingInFileNames": false,
       "importHelpers": true,
       "jsx": "react",
       "lib": ["dom", "es2018", "esnext.intl", "es2017.intl", "es2018.intl"],
