--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ install:
 
 script:
   - npm run cal-start
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  on:
+    branch: gh-pages
